apps/flappy-fun/overlays/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flappy-fun
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: staging.flappy-fun.example.com   # optional (can remove if not using DNS)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flappy-fun
                port:
                  number: 80
